2006-02-20  Stipe Tolj  <stolj at kannel.org>
  * wap/cookies.c: reverting to previous revision, the new locking seems to 
    cause a deadlock situation. Need to resolve this seperately.

2006-02-19  Stipe Tolj  <stolj at kannel.org>
  * doc/userguide/userguide.xml: added missing 'access-log-<foobar>' config
    directives to wapbox group. Thanks to Roberto Carlos Navas for the hint.

2006-02-10  Alexander Malysh <amalysh at kannel.org>
  * gwlib/http.c: replaced not needed enums with defines. Some whitespaces fixes.
    Fixes for GCC4 warnings.
    Fixed function conn_pool_get where retry was not reseted.
    Fixed check_pool_conn where we now do explicit conn_unregister (it could be a cause
    for dealocks). 
    Fixed start_client_threads where no error handling was present when create of
    write_request_thread fail.

2006-02-09  Stipe Tolj  <stolj at kannel.org>
  * gw/wapbox.c: fixing bug #305, where wapbox did not react on SIGTERM. 
    Now SIGINT and SIGTERM will cause wapbox to shutdown.
    
2006-02-09  Stipe Tolj  <stolj at kannel.org>
  * wap/cookies.c: fixing bug #304, which caused segfault via octstr_append()
    called from set_cookies(), which should be a race-condition. Now the 
    cookies list is protected via a permanent lock before we either cycle in
    the list or delete/append items. Thanks to Mindaugas for reporting.

2006-02-07  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_smpp.c: fixed typo deliver_sm -> data_sm.
    Thanks to Stipe for pointing to this.

2006-02-04  Stipe Tolj  <stolj at kannel.org>
  * gw/pushkannel.conf: remove trailing newlines. NLC.
  
2006-02-04  Stipe Tolj  <stolj at kannel.org>
  * gw/ota_compiler.c: fixed OMA compilation, due to mis-ordered array of 
    parameter attributes which caused all attributes to be inlined.
    Thanks to Tomas Varaneckas <tomas.varaneckas@metasite.net> for report.
    [Msg-Id: <43E071A8.40302@metasite.net>]

2006-01-29  Alexander Malysh <amalysh at kannel.org>