@@ -1,3 +1,10 @@
+2006-02-21  Alexander Malysh <amalysh at kannel.org>
+  * gwlib/http.c: remove retry within http.c in client code. That is a bad idea
+    to do any retries in http.c module because it's just library that should just
+    give error to the caller back and not decide to do any retries. The caller is
+    then responsible to do retry.
+    [Msg-Id: <dsil0m$91h$1@sea.gmane.org>]
+
 2006-02-20  Stipe Tolj  <stolj at kannel.org>
   * wap/cookies.c: reverting to previous revision, the new locking seems to 
     cause a deadlock situation. Need to resolve this seperately.
